[project]
name = "okta"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ananyamolmoori25", email = "MolmooriSai.Ananya@genpact.com"},
]
dependencies = [
    "fastapi",
    "aiohttp"
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
